[gd_scene load_steps=7 format=2]

[ext_resource path="res://Objects/Enemies/Test_enemies/Resources/Horizontal_Hesitant.png" type="Texture" id=1]
[ext_resource path="res://Objects/Enemies/Test_enemies/Enemy_Hori_ColdFeet.gd" type="Script" id=2]
[ext_resource path="res://Objects/Enemies/Enemy_Health.gd" type="Script" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 12, 15 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 12, 15 )

[sub_resource type="Animation" id=3]
resource_name = "Dying"
tracks/0/type = "method"
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 1 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "at_dead_queue_free"
} ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:speed")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:flip_h")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprite:rotation_degrees")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 90.0 ]
}

[node name="Enemy_Hori_ColdFeet" type="KinematicBody2D"]
collision_layer = 0
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 1 )
shape = SubResource( 1 )

[node name="Floor_Check" type="RayCast2D" parent="."]
position = Vector2( -13, 15 )
enabled = true
cast_to = Vector2( 0, 20 )

[node name="Hurtbox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
position = Vector2( 0, 1 )
shape = SubResource( 2 )

[node name="Enemy_Health_Counter" type="Node2D" parent="."]
script = ExtResource( 3 )

[node name="Health_Counter" type="Label" parent="Enemy_Health_Counter"]
margin_left = -4.0
margin_top = 20.0
margin_right = 36.0
margin_bottom = 34.0
text = "8"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Dying = SubResource( 3 )

[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]
